client/src/App.css
/* ... */
a {
  text-decoration: none;
}

ul {
  list-style: none;
}

img {
  width: 100%;
}

/* Utilities */
.container {
  max-width: 100vw;
  height: auto;
  margin: auto;
}

/* Text Styles*/
.x-large {
  font-size: 4rem;
  line-height: 1.2;
  margin-bottom: 1rem;
}

.large {
  font-size: 3rem;
  line-height: 1.2;
  margin-bottom: 1rem;
  margin-top: 2em;
}

.lead {
  color: #00022E !important;
  font-weight: 1000;
  margin-top: 6rem;
  font-size: 52px !important;
  
}

.text-center {
  text-align: center;
}

.text-primary {
  color: var(--primary-color);
}

.text-dark {
  color: var(--dark-color);
}

/* Padding */
.p {
  padding: 0.5rem;
}
.p-1 {
  padding: 1rem;
}
.p-2 {
  padding: 2rem;
}
.p-3 {
  padding: 3rem;
}
.py {
  padding: 0.5rem 0;
}
.py-1 {
  padding: 1rem 0;
}
.py-2 {
  padding: 2rem 0;
}
.py-3 {
  padding: 3rem 0;
}

/* Margin */
.m {
  margin: 0.5rem;
}
.m-1 {
  margin: 1rem;
}
.m-2 {
  margin: 2rem;
}
.m-3 {
  margin: 3rem;
}
.my {
  margin: 0.5rem 0;
}
.my-1 {
  margin: 1rem 0;
}
.my-2 {
  margin: 2rem 0;
}
.my-3 {
  margin: 3rem 0;
}

.btn {
  display: inline-block;
  background: var(--light-color);
  color: #333;
  padding: 0.4rem 1.3rem;
  font-size: 1rem;
  border: none;
  cursor: pointer;
  margin-right: 0.5rem;
  transition: opacity 0.2s ease-in;
  outline: none;
}

.badge {
  font-size: 0.8rem;
  padding: 0.1rem;
  text-align: center;
  margin: 0.3rem;
  background: var(--light-color);
  color: #333;
}

.alert {
  padding: 0.8rem;
  margin: 1rem 0;
  opacity: 0.9;
  background: var(--light-color);
  color: #333;
}

.btn-primary,
.bg-primary,
.badge-primary,
.alert-primary {
  background: #00022e;
  color: #fff;
  border-radius: 30px;
  padding: 12px 40px;
  width: 80% !important;
  box-shadow: 0 4px 8px 0 rgba(0, 2, 46, 0.4);
}

 .question{
  margin-left: 5% !important; 
  font-size: 1.3em;
}

.answer{
  margin-left: 5% !important;
  outline: none;
  background: inherit;
  box-shadow: 0 4px 8px 0 rgba(0, 121, 145, 0.4);
  border: none;
  padding: 10px 20px;
  margin-top: 10px;
  width: 60%;
}

.answer:hover{
  box-shadow: 0 8px 16px 0 rgba(0, 121, 145, 0.4);
}



.btn-light,
.bg-light,
.badge-light,
.alert-light {
  background: var(--light-color);
  color: #333;
}

.btn-dark,
.bg-dark,
.badge-dark,
.alert-dark {
  background: var(--dark-color);
  color: #fff;
}

.btn-danger,
.bg-danger,
.badge-danger,
.alert-danger {
  background: var(--danger-color);
  color: #fff;
}

.btn-success,
.bg-success,
.badge-success,
.alert-success {
  background: var(--success-color);
  color: #fff;
}

.btn-white,
.bg-white,
.badge-white,
.alert-white {
  background: #fff;
  color: #333;
  border: #ccc solid 1px;
}

.btn:hover {
  opacity: 0.8;
}

.bg-light,
.badge-light {
  border: #ccc solid 1px;
}

.round-img {
  border-radius: 50%;
}

.line {
  height: 1px;
  background: #ccc;
  margin: 1.5rem 0;
}

/* Overlay */
.dark-overlay {
  background-color: rgba(0, 0, 0, 0.7);
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

/* Forms */
.form{
  margin: 2% 30% !important;
  margin: auto;
  align-items: center;
  width: 60vw;
}
.form .form-group {
  margin:  0;
  width: 100vw;
}

.form .form-text {
  display: block;
  margin-top: 0.3rem;
  color: #888;
}

h3{
  color: #FF073A !important;
}
.form input[type='email']:focus,
.form input[type='password']:focus,
.form input[type='text']:focus{
  outline: none;
}



.submit{
  text-align: center;
}

.form .social-input {
  display: flex;
}

.form .social-input i {
  padding: 0.5rem;
  width: 4rem;
}

.table th,
.table td {
  padding: 1rem;
  text-align: left;
}

.table th {
  background: var(--light-color);
}

/* Navbar */
.navbar {
  color: var(--dark-color) !important;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 0.7rem 2rem;
  position: fixed;
  z-index: 100;
  width: 100vw;
  top: 0;
  background-image: linear-gradient(to right,  rgba(0, 121, 145, 0.26), rgba(120, 255, 214, 0.36));
}

.navbar ul {
  display: flex;
}



.navbar a {
  color: #00022E ;
  padding: 0.45rem;
  margin: 0 0.25rem;
  font-weight: 1000;
}

.navbar a:hover {
  color: var(--primary-color);
}

.navbar .welcome span {
  margin-right: 0.6rem;
}

/* Landing Page */
.landing {
  background-image: linear-gradient(to top,  rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0.4)),  url('https://images.unsplash.com/photo-1530049478161-0780526964f4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1080&q=60');
  background-size: cover;
  display: flex;
  justify-content: center;
  align-items: center;
  overflow-y: hidden;
  height: 100vh;
  font-family: 'Poppins', sans-serif;
}
.landing-main .login-form-group{
  width: 80%;
  padding: 80px 100px ;
  align-items: center;
  align-content: center;
}
.landing-main .loginForm{
  width: 100%;
  display: flex;
  flex-direction: row;
}
.landing-inner {
  color: #fff;
  height: 100%;
  width: 80%;
  margin: auto;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  text-align: center;
}

/* Profiles Page */
.profile {
  display: grid;
  grid-template-columns: 2fr 4fr 2fr;
  align-items: center;
  grid-gap: 2rem;
  padding: 1rem;
  line-height: 1.8;
  margin-bottom: 1rem;
}

/* Profile Page */
.profile-grid {
  display: grid;
  grid-template-areas:
    'top top'
    'about about'
    'exp edu'
    'github github';
  grid-gap: 1rem;
}

.profile-top {
  grid-area: top;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  text-align: center;
}

.profile-top img {
  width: 250px;
}

.profile-top .icons a {
  color: #fff;
  margin: 0 0.3rem;
}

.profile-top .icons a:hover {
  color: var(--dark-color);
}

.profile-about {
  grid-area: about;
  text-align: center;
}

.profile-about .skills {
  display: flex;
  align-items: center;
  justify-content: center;
  text-align: center;
}

.profile-exp {
  grid-area: exp;
}

.profile-edu {
  grid-area: edu;
}
/* ... */

